--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,49 @@
 body {
-  background-color: blue;
-  animation: sky 20s linear infinite;
+  background: black;
 }
 
-@keyframes sky {
+.aurora {
+  box-shadow: 0 0 45vmax 45vmax lightseagreen;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: lightseagreen;
+  opacity: 0.5;
+  animation: aurora 20s linear infinite, fade 10s ease-in-out infinite;
+}
+
+@keyframes fade {
   0% {
-    background-color: blue;
-  }
-  25% {
-    background-color: lightblue;
+    opacity: 0.2;
   }
   50% {
-    background-color: lightcyan;
-  }
-  75% {
-    background-color: lightgreen;
+    opacity: 0.6;
   }
   100% {
-    background-color: green;
+    opacity: 0.2;
+  }
+}
+
+@keyframes aurora {
+  0% {
+    background-color: lightseagreen;
+  }
+  20% {
+    background-color: lightskyblue;
+  }
+  40% {
+    background-color: lightgreen;
+  }
+  60% {
+    background-color: lightgoldenrodyellow;
+  }
+  80% {
+    background-color: lightpink;
+  }
+  100% {
+    background-color: lightseagreen;
   }
 }
 
@@ -26,5 +52,5 @@ body {
 }
 
 .ground {
-  background-image: url("ground.jpg");
+  background-image: url("ground.png");
 }
