--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,27 @@ body {
 .ground {
   background-image: url("ground.png");
 }
+
+.puppy {
+  background-image: url("puppy.png");
+  animation: moveX 3.05s linear 0s infinite alternate,
+    moveY 3.4s linear 0s infinite alternate;
+}
+
+@keyframes moveX {
+  from {
+    left: 0;
+  }
+  to {
+    left: 480px;
+  }
+}
+
+@keyframes moveY {
+  from {
+    top: 0;
+  }
+  to {
+    top: 280px;
+  }
+}
