--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@ body {
 
 .aurora {
   box-shadow: 0 0 45vmax 45vmax lightseagreen;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: relative;
+  width: 300px;
+  height: 300px;
   top: 0;
   left: 0;
   background-color: lightseagreen;
