--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,19 @@ body {
   background: black;
 }
 
-.aurora {
-  box-shadow: 0 0 45vmax 45vmax lightseagreen;
+.container {
   position: relative;
   width: 300px;
   height: 300px;
+  top: 0;
+  left: 0;
+}
+
+.aurora {
+  box-shadow: 0 0 45vmax 45vmax lightseagreen;
+  position: relative;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   background-color: lightseagreen;
@@ -48,9 +56,12 @@ body {
 }
 
 .puppy {
-  z-index: 1;
-  width: 50vw;
-  height: 50vw;
+  display: block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #3673cf;
+  position: absolute;
   animation: moveX 3.05s linear 0s infinite alternate,
     moveY 3.4s linear 0s infinite alternate;
 }
@@ -63,7 +74,6 @@ body {
     left: 480px;
   }
 }
-
 @keyframes moveY {
   from {
     top: 0;
@@ -74,7 +84,6 @@ body {
 }
 
 .ground {
-  z-index: -1;
   position: absolute;
   left: 0;
   bottom: 0;
