--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,24 @@
+:root {
+  --width: 100vw;
+  --height: 100vh;
+}
+
 body {
   background: black;
 }
 
 .container {
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: var(--width);
+  height: var(--height);
   top: 0;
   left: 0;
 }
 
 .aurora {
-  box-shadow: 0 0 45vmax 45vmax lightseagreen;
-  position: relative;
+  margin: auto;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  background-color: lightseagreen;
   opacity: 0.5;
   animation: aurora 20s linear infinite, fade 10s ease-in-out infinite;
 }
@@ -27,7 +28,7 @@ body {
     opacity: 0.2;
   }
   50% {
-    opacity: 0.6;
+    opacity: 0.4;
   }
   100% {
     opacity: 0.2;
@@ -57,13 +58,13 @@ body {
 
 .puppy {
   display: block;
-  width: 20px;
-  height: 20px;
+  width: 10vw;
+  height: 10vw;
   border-radius: 50%;
   background-color: #3673cf;
   position: absolute;
-  animation: moveX 3.05s linear 0s infinite alternate,
-    moveY 3.4s linear 0s infinite alternate;
+  animation: moveX 10s linear 0s infinite alternate,
+    moveY 12s linear 0s infinite alternate;
 }
 
 @keyframes moveX {
@@ -71,7 +72,7 @@ body {
     left: 0;
   }
   to {
-    left: 480px;
+    left: var(--width);
   }
 }
 @keyframes moveY {
@@ -79,12 +80,21 @@ body {
     top: 0;
   }
   to {
-    top: 280px;
+    top: var(--height);
   }
 }
 
 .ground {
   position: absolute;
+  width: var(--width);
   left: 0;
   bottom: 0;
+}
+
+.tree {
+  z-index: -1;
+  position: absolute;
+  width: var(--width);
+  left: 0;
+  bottom: 5vh;
 }
