--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 :root {
   --width: 100vw;
   --height: 100vh;
+  --ball-width: 10vw;
+  --ball-height: 10vw;
 }
 
 body {
@@ -58,8 +60,8 @@ body {
 
 .puppy {
   display: block;
-  width: 10vw;
-  height: 10vw;
+  width: var(--ball-width);
+  height: var(--ball-height);
   border-radius: 50%;
   background-color: #3673cf;
   position: absolute;
@@ -72,7 +74,7 @@ body {
     left: 0;
   }
   to {
-    left: var(--width);
+    left: var(--width) - var(--ball-width) / 2;
   }
 }
 @keyframes moveY {
@@ -80,19 +82,21 @@ body {
     top: 0;
   }
   to {
-    top: var(--height);
+    top: var(--height) - var(--ball-height) / 2;
   }
 }
 
 .ground {
+  z-index: -1;
   position: absolute;
   width: var(--width);
+  height: 10vh;
   left: 0;
   bottom: 0;
 }
 
 .tree {
-  z-index: -1;
+  z-index: -2;
   position: absolute;
   width: var(--width);
   left: 0;
