--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,12 @@
 }
 
 body {
+  padding: 0;
   background: black;
 }
 
 .container {
+  padding: 0;
   width: var(--width);
   height: var(--height);
 }
