--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
 }
 
 .aurora {
+  position: absolute;
   margin: auto;
   width: var(--width);
   height: var(--height);
@@ -86,8 +87,9 @@ body {
 }
 
 .ground {
-  z-index: -1;
-  position: relative;
+  z-index: 1;
+  background: blue;
+  position: absolute;
   width: var(--width);
   height: 20vh;
   left: 0;
@@ -95,9 +97,11 @@ body {
 }
 
 .trees {
-  z-index: -2;
+  z-index: 2;
+  background: white;
   position: absolute;
   width: var(--width);
+  height: 30vh;
   left: 0;
-  bottom: 5vh;
+  bottom: 20vh;
 }
