--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ body {
 }
 
 .puppy {
+  z-index: 3;
   display: block;
   background-image: url("puppy.png");
   background-color: lightblue;
@@ -97,31 +98,39 @@ body {
   background: white;
   position: absolute;
   width: var(--width);
-  height: 30vh;
+  height: 40vh;
   left: 0;
-  bottom: 20vh;
+  bottom: 0;
 }
 
 .rainbow {
-    text-align: center;
-    text-decoration: underline;
-    font-size: 16px;
-    font-family: monospace;
-    letter-spacing: 5px;
-    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: rainbow_animation 6s ease-in-out infinite;
-    background-size: 400% 100%;
+  text-align: center;
+  text-decoration: underline;
+  font-size: 16px;
+  font-family: monospace;
+  letter-spacing: 5px;
+  background: linear-gradient(
+    to right,
+    #6666ff,
+    #0099ff,
+    #00ff00,
+    #ff3399,
+    #6666ff
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: rainbow_animation 6s ease-in-out infinite;
+  background-size: 400% 100%;
 }
 
 @keyframes rainbow_animation {
-    0%,100% {
-        background-position: 0 0;
-    }
+  0%,
+  100% {
+    background-position: 0 0;
+  }
 
-    50% {
-        background-position: 100% 0;
-    }
+  50% {
+    background-position: 100% 0;
+  }
 }
