--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ body {
   overflow: hidden;
 }
 
+.graphic-design {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+}
+
 .aurora {
   position: absolute;
   margin: auto;
@@ -85,7 +92,6 @@ body {
 
 .ground {
   z-index: 1;
-  background: blue;
   position: absolute;
   width: var(--width);
   height: 20vh;
@@ -95,7 +101,6 @@ body {
 
 .trees {
   z-index: 2;
-  background: white;
   position: absolute;
   width: var(--width);
   height: 40vh;
