--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,9 @@ body {
 .puppy {
   z-index: 3;
   display: block;
-  background-image: url("./img/puppy.png");
+  background: url(/img/puppy.png) no-repeat no-repeat center center;
+  background-size: 100% 100%;
+  background-attachment: scroll;
   width: var(--ball-width);
   height: var(--ball-height);
   border-radius: 50%;
