--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,57 @@ body {
   overflow: hidden;
 }
 
+.stats {
+  color: white;
+  width: 100%;
+  height: 100%;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  position: absolute;
+  z-index: 4;
+}
+
+.stats-li {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  height: 100%;
+  justify-content: space-evenly;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+
+  li {
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+    align-self: center;
+    animation: bounce 4s ease-in-out infinite alternate;
+  }
+
+  li::before {
+    content: '❄️';
+    display: block;
+  }
+
+  li::after {
+    content: '❄️';
+    display: block;
+  }
+}
+
+.stats-heading {
+  text-align: center;
+}
+
+@keyframes bounce {
+  from {
+    transform: translateY(-20vh);
+  }
+  to {
+    transform: translateY(-10vh);
+  }
+}
+
 .graphic-design {
   position: absolute;
   width: 100%;
@@ -70,7 +121,8 @@ body {
   height: var(--ball-height);
   border-radius: 50%;
   position: absolute;
-  animation: moveX 10s linear 0s infinite alternate, moveY 12s linear 0s infinite alternate;
+  animation: moveX 10s linear 0s infinite alternate,
+    moveY 12s linear 0s infinite alternate;
 }
 
 @keyframes moveX {
@@ -81,6 +133,7 @@ body {
     left: calc(var(--width) - var(--ball-width));
   }
 }
+
 @keyframes moveY {
   from {
     top: 0;
